Implement string localization across components for enhanced multilingual support
- Added translation keys for user-facing strings in the en.json and fr.json files, ensuring consistent language usage throughout the application.
- Integrated the useTranslation hook from react-i18next in various components, including Dashboard, Home, and ForgotPassword, to replace hardcoded strings with translation keys.
- Updated the Dashboard and Home components to utilize localized titles, descriptions, and button texts, improving accessibility for users in different languages.
- Ensured that all user-facing text adheres to the new localization requirements, enhancing the overall user experience by providing a fully localized interface.

This update significantly improves the application's multilingual capabilities, allowing users to interact with the platform in their preferred language.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -65,6 +65,7 @@
     "forgotPassword": "Forgot password?",
     "resetPassword": "Reset password",
     "resetPasswordTitle": "Reset your password",
+    "resetPasswordMessage": "Enter your email address and we'll send you a link to reset your password",
     "dontHaveAccount": "Don't have an account?",
     "alreadyHaveAccount": "Already have an account?",
     "signUp": "Sign up",
@@ -105,7 +106,17 @@
     "filterBy": "Filter by",
     "noData": "No data available",
     "noReviews": "No reviews found",
-    "loading": "Loading your dashboard..."
+    "loading": "Loading your dashboard...",
+    "companiesOverview": "Companies Overview",
+    "keywordAnalysisByCategory": "Keyword Analysis by Category",
+    "noKeywordData": "No keyword data available yet.",
+    "trendingKeywords": "Trending Keywords",
+    "loadingKeywordData": "Loading keyword data...",
+    "noCompanies": "No companies yet. Visit the Companies page to add your first business.",
+    "mentions": "mentions",
+    "mostFrequentlyMentioned": "Most frequently mentioned terms across all reviews",
+    "noKeywordsAnalyzed": "No keywords analyzed yet.",
+    "anonymous": "Anonymous"
   },
   "companies": {
     "title": "Companies",
@@ -246,5 +257,37 @@
     "admin": "Admin",
     "free": "Free",
     "pro": "Pro"
+  },
+  "home": {
+    "heroTitle": "Take Control of Your Online Reputation",
+    "heroSubtitle": "Monitor, analyze, and respond to customer reviews from all major platforms in one unified dashboard.",
+    "getStartedFree": "Get Started Free",
+    "viewPricing": "View Pricing",
+    "featuresTitle": "Everything You Need",
+    "feature1Title": "Pull Reviews from Social Media",
+    "feature1Desc": "Aggregate reviews from Google, Facebook, Yelp, OpenTable, and TripAdvisor all in one place.",
+    "feature2Title": "Aggregate Across Locations",
+    "feature2Desc": "Track reviews from multiple locations and get a unified view of your customer feedback.",
+    "feature3Title": "Extract Keywords & Topics",
+    "feature3Desc": "Automatically extract key insights from reviews to understand what customers are talking about.",
+    "feature4Title": "Monthly Customer Sentiment",
+    "feature4Desc": "Get comprehensive monthly summaries of how your customers feel about your business (paid plan).",
+    "pricingTitle": "Simple, Transparent Pricing",
+    "pricingSubtitle": "Choose the plan that fits your needs",
+    "mostPopular": "MOST POPULAR",
+    "planFree": "Free",
+    "planPro": "Professional",
+    "monthly": "/month",
+    "perMonth": "/month",
+    "getStarted": "Get Started",
+    "startFreeTrial": "Start Free Trial",
+    "featureReviews": "Up to 10 reviews/month",
+    "featureAnalytics": "Basic analytics",
+    "featureMultiPlatform": "Multi-platform support",
+    "featureKeywords": "Keyword extraction",
+    "featureUnlimited": "Unlimited reviews/month",
+    "featureMonthlySummary": "Monthly summary reports",
+    "featureSentiment": "Advanced sentiment analysis",
+    "featureSupport": "Priority support"
   }
 }
