--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -65,6 +65,7 @@
     "forgotPassword": "Mot de passe oublié?",
     "resetPassword": "Réinitialiser le mot de passe",
     "resetPasswordTitle": "Réinitialisez votre mot de passe",
+    "resetPasswordMessage": "Entrez votre adresse courriel et nous vous enverrons un lien pour réinitialiser votre mot de passe",
     "dontHaveAccount": "Vous n'avez pas de compte?",
     "alreadyHaveAccount": "Vous avez déjà un compte?",
     "signUp": "S'inscrire",
@@ -105,7 +106,17 @@
     "filterBy": "Filtrer par",
     "noData": "Aucune donnée disponible",
     "noReviews": "Aucun avis trouvé",
-    "loading": "Chargement de votre tableau de bord..."
+    "loading": "Chargement de votre tableau de bord...",
+    "companiesOverview": "Aperçu des entreprises",
+    "keywordAnalysisByCategory": "Analyse des mots-clés par catégorie",
+    "noKeywordData": "Aucune donnée de mots-clés disponible pour le moment.",
+    "trendingKeywords": "Mots-clés en tendance",
+    "loadingKeywordData": "Chargement des données de mots-clés...",
+    "noCompanies": "Aucune entreprise pour le moment. Visitez la page Entreprises pour ajouter votre première entreprise.",
+    "mentions": "mentions",
+    "mostFrequentlyMentioned": "Termes les plus fréquemment mentionnés dans tous les avis",
+    "noKeywordsAnalyzed": "Aucun mot-clé analysé pour le moment.",
+    "anonymous": "Anonyme"
   },
   "companies": {
     "title": "Entreprises",
@@ -246,5 +257,37 @@
     "admin": "Admin",
     "free": "Gratuit",
     "pro": "Pro"
+  },
+  "home": {
+    "heroTitle": "Reprenez le contrôle de votre réputation en ligne",
+    "heroSubtitle": "Surveillez, analysez et répondez aux avis clients depuis toutes les grandes plateformes dans un tableau de bord unifié.",
+    "getStartedFree": "Commencer gratuitement",
+    "viewPricing": "Voir les tarifs",
+    "featuresTitle": "Tout ce dont vous avez besoin",
+    "feature1Title": "Récupérez les avis des réseaux sociaux",
+    "feature1Desc": "Agrégez les avis de Google, Facebook, Yelp, OpenTable et TripAdvisor en un seul endroit.",
+    "feature2Title": "Agrégez plusieurs emplacements",
+    "feature2Desc": "Suivez les avis de plusieurs emplacements et obtenez une vue unifiée des commentaires de vos clients.",
+    "feature3Title": "Extrayez des mots-clés et des sujets",
+    "feature3Desc": "Extrayez automatiquement les informations clés des avis pour comprendre ce dont parlent vos clients.",
+    "feature4Title": "Sentiment mensuel des clients",
+    "feature4Desc": "Obtenez des résumés mensuels complets sur les sentiments de vos clients concernant votre entreprise (forfait payant).",
+    "pricingTitle": "Tarification simple et transparente",
+    "pricingSubtitle": "Choisissez le forfait qui convient à vos besoins",
+    "mostPopular": "LE PLUS POPULAIRE",
+    "planFree": "Gratuit",
+    "planPro": "Professionnel",
+    "monthly": "/mois",
+    "perMonth": "/mois",
+    "getStarted": "Commencer",
+    "startFreeTrial": "Essai gratuit",
+    "featureReviews": "Jusqu'à 10 avis/mois",
+    "featureAnalytics": "Analyse basique",
+    "featureMultiPlatform": "Support multi-plateformes",
+    "featureKeywords": "Extraction de mots-clés",
+    "featureUnlimited": "Avis illimités/mois",
+    "featureMonthlySummary": "Rapports de résumé mensuels",
+    "featureSentiment": "Analyse de sentiment avancée",
+    "featureSupport": "Support prioritaire"
   }
 }
