Enhance CompanyCard and localization support for improved multilingual experience
- Integrated the useTranslation hook from react-i18next into the CompanyCard component, replacing hardcoded strings with translation keys for better localization.
- Updated the CompanyCard to display location, review, and average rating labels using translation keys, ensuring consistent language usage.
- Added new translation keys in both en.json and fr.json files to support the updated strings, enhancing the application's multilingual capabilities.
- Improved the Dashboard component to utilize localized titles and user greetings, further enriching the user experience for different language preferences.

This update significantly enhances the application's localization, allowing users to interact with the platform in their preferred language while maintaining a consistent and professional interface.

--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -87,7 +87,11 @@
   },
   "dashboard": {
     "title": "Tableau de bord",
+    "seoTitle": "Tableau de bord - Boresha",
+    "seoDescription": "Consultez votre tableau de bord d'analyse des avis. Surveillez les avis, suivez le sentiment et analysez les commentaires clients de tous vos emplacements commerciaux.",
+    "seoKeywords": "tableau de bord des avis, analyse des avis, analyse du sentiment, tableau de bord des commentaires clients",
     "welcome": "Bon retour",
+    "welcomeBack": "Bon retour, {{name}} !",
     "overview": "Aperçu",
     "totalReviews": "Total des avis",
     "averageRating": "Note moyenne",
@@ -116,13 +120,38 @@
     "mentions": "mentions",
     "mostFrequentlyMentioned": "Termes les plus fréquemment mentionnés dans tous les avis",
     "noKeywordsAnalyzed": "Aucun mot-clé analysé pour le moment.",
-    "anonymous": "Anonyme"
+    "anonymous": "Anonyme",
+    "location": "emplacement",
+    "locations": "emplacements"
   },
   "companies": {
     "title": "Entreprises",
     "addCompany": "Ajouter une entreprise",
     "editCompany": "Modifier l'entreprise",
     "noCompanies": "Aucune entreprise trouvée",
+    "loading": "Chargement de vos entreprises...",
+    "manage": "Gérez les entreprises que vous analysez",
+    "add": "Ajouter",
+    "noCompaniesYet": "Aucune entreprise pour le moment",
+    "addFirstCompany": "Ajoutez votre première entreprise pour commencer à analyser les avis",
+    "location": "emplacement",
+    "locations": "emplacements",
+    "review": "avis",
+    "reviews": "avis",
+    "viewDetails": "Voir les détails",
+    "companyName": "Nom de l'entreprise",
+    "industry": "Industrie",
+    "industryPlaceholder": "Sélectionnez ou tapez une industrie",
+    "website": "Site web",
+    "websitePlaceholder": "exemple.com",
+    "description": "Description",
+    "update": "Mettre à jour",
+    "create": "Créer",
+    "saving": "Enregistrement...",
+    "comingSoon": "Bientôt disponible",
+    "addLocationFirst": "Veuillez ajouter au moins un emplacement à cette entreprise avant de connecter les plateformes.",
+    "failedLoadLocations": "Échec du chargement des emplacements de l'entreprise",
+    "failedConnectPlatform": "Échec de la connexion à la plateforme",
     "createFirst": "Créez votre première entreprise",
     "companyName": "Nom de l'entreprise",
     "industry": "Industrie",
@@ -139,7 +168,12 @@
     "saveCompany": "Enregistrer l'entreprise",
     "companyCreated": "Entreprise créée avec succès",
     "companyUpdated": "Entreprise mise à jour avec succès",
-    "companyDeleted": "Entreprise supprimée avec succès"
+    "companyDeleted": "Entreprise supprimée avec succès",
+    "reviews": "Avis",
+    "avgRating": "Note moy.",
+    "positive": "positif",
+    "negative": "négatif",
+    "viewDetails": "Voir les détails"
   },
   "profile": {
     "title": "Paramètres du profil",
