--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -87,7 +87,11 @@
   },
   "dashboard": {
     "title": "Dashboard",
+    "seoTitle": "Dashboard - Boresha",
+    "seoDescription": "View your review analytics dashboard. Monitor reviews, track sentiment, and analyze customer feedback from all your business locations.",
+    "seoKeywords": "review dashboard, review analytics, sentiment analysis, customer feedback dashboard",
     "welcome": "Welcome back",
+    "welcomeBack": "Welcome back, {{name}}!",
     "overview": "Overview",
     "totalReviews": "Total Reviews",
     "averageRating": "Average Rating",
@@ -116,17 +120,40 @@
     "mentions": "mentions",
     "mostFrequentlyMentioned": "Most frequently mentioned terms across all reviews",
     "noKeywordsAnalyzed": "No keywords analyzed yet.",
-    "anonymous": "Anonymous"
+    "anonymous": "Anonymous",
+    "location": "location",
+    "locations": "locations"
   },
   "companies": {
     "title": "Companies",
     "addCompany": "Add Company",
     "editCompany": "Edit Company",
     "noCompanies": "No companies found",
-    "createFirst": "Create your first company",
-    "companyName": "Company name",
+    "loading": "Loading your companies...",
+    "manage": "Manage the businesses you're analyzing",
+    "add": "Add",
+    "noCompaniesYet": "No companies yet",
+    "addFirstCompany": "Add your first company to start analyzing reviews",
+    "singleLocation": "location",
+    "multipleLocations": "locations",
+    "singleReview": "review",
+    "multipleReviews": "reviews",
+    "viewDetails": "View Details",
+    "addCompanyDialog": "Add Company",
+    "companyName": "Company Name",
     "industry": "Industry",
+    "industryPlaceholder": "Select or type an industry",
     "website": "Website",
+    "websitePlaceholder": "example.com",
+    "description": "Description",
+    "update": "Update",
+    "create": "Create",
+    "saving": "Saving...",
+    "comingSoon": "Coming Soon",
+    "addLocationFirst": "Please add at least one location to this company before connecting platforms.",
+    "failedLoadLocations": "Failed to load company locations",
+    "failedConnectPlatform": "Failed to connect platform",
+    "createFirst": "Create your first company",
     "logo": "Logo",
     "viewCompany": "View Company",
     "totalLocations": "Total Locations",
@@ -139,7 +166,12 @@
     "saveCompany": "Save Company",
     "companyCreated": "Company created successfully",
     "companyUpdated": "Company updated successfully",
-    "companyDeleted": "Company deleted successfully"
+    "companyDeleted": "Company deleted successfully",
+    "reviews": "Reviews",
+    "avgRating": "Avg Rating",
+    "positive": "positive",
+    "negative": "negative",
+    "viewDetails": "View Details"
   },
   "profile": {
     "title": "Profile Settings",
