Enhance Footer and CompanyPage with localization support for improved multilingual experience
- Integrated the useTranslation hook from react-i18next into the Footer and CompanyPage components, replacing hardcoded strings with translation keys for better localization.
- Updated the Footer to display privacy policy, terms of use, and copyright information using translation keys, ensuring consistent language usage.
- Enhanced the CompanyPage to utilize localized titles, descriptions, and button texts, improving accessibility for users in different languages.
- Added new translation keys in both en.json and fr.json files to support the updated strings, enriching the application's multilingual capabilities.

This update significantly enhances the application's localization, allowing users to interact with the platform in their preferred language while maintaining a consistent and professional interface.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -321,5 +321,73 @@
     "featureMonthlySummary": "Monthly summary reports",
     "featureSentiment": "Advanced sentiment analysis",
     "featureSupport": "Priority support"
+  },
+  "companyPage": {
+    "seoTitle": "{{company}} - Review Analytics | Boresha",
+    "seoDescription": "View detailed review analytics for {{company}}. Track sentiment, ratings, keywords, and customer feedback across all locations and platforms.",
+    "seoKeywords": "{{company}} reviews, review analytics, customer feedback, sentiment analysis, {{industry}} reviews",
+    "backToDashboard": "Back to Dashboard",
+    "back": "Back",
+    "refresh": "Refresh",
+    "loadingCompanyData": "Loading company data...",
+    "companyNotFound": "Company not found",
+    "dataFilters": "Data Filters",
+    "dataFiltersDescription": "Filter all data on this page by location, date, keyword, rating, and topic",
+    "clearAll": "Clear all",
+    "allLocations": "All Locations",
+    "fromDate": "From Date",
+    "toDate": "To Date",
+    "keyword": "Keyword",
+    "allKeywords": "All Keywords",
+    "rating": "Rating",
+    "allRatings": "All Ratings",
+    "stars": "stars",
+    "star": "star",
+    "topic": "Topic",
+    "allTopics": "All Topics",
+    "active": "Active:",
+    "keywordLabel": "Keyword: {{keyword}}",
+    "starsLabel": "{{rating}} {{stars}}",
+    "topicLabel": "Topic: {{topic}}",
+    "totalReviews": "Total Reviews",
+    "averageRating": "Average Rating",
+    "positiveReviews": "Positive Reviews",
+    "negativeReviews": "Negative Reviews",
+    "topics": "Topics",
+    "topicsDescription": "Common themes discussed in reviews",
+    "showLess": "Show Less",
+    "showAll": "Show All ({{count}})",
+    "mentionedIn": "Mentioned in",
+    "review": "review",
+    "reviews": "reviews",
+    "keywordAnalysisByCategory": "Keyword Analysis by Category",
+    "mentions": "mentions",
+    "trendingKeywords": "Trending Keywords",
+    "trendingKeywordsDescription": "Most frequently mentioned terms in reviews",
+    "recentReviews": "Recent Reviews",
+    "allReviews": "All Reviews",
+    "showingReviews": "Showing {{shown}} of {{total}} reviews",
+    "pageOf": "(Page {{current}} of {{total}})",
+    "recentOnly": "Recent Only",
+    "showAllReviews": "Show All",
+    "clearFilters": "Clear filters",
+    "noReviewsMatch": "No reviews match your filters",
+    "noReviewsMatchDescription": "Try adjusting your filters to see more results",
+    "clearAllFilters": "Clear All Filters",
+    "previous": "Previous",
+    "next": "Next",
+    "pageOfShort": "Page {{current}} of {{total}}",
+    "comingSoon": "Coming Soon!",
+    "integrationComingSoon": "{{platform}} integration is currently under development. We're working hard to bring you seamless review imports from all major platforms.",
+    "stayTuned": "Stay tuned for updates! We'll notify you as soon as this feature becomes available.",
+    "gotIt": "Got it",
+    "pleaseAddLocation": "Please add at least one location to this company before connecting platforms.",
+    "reviewsAvailableShortly": "Reviews from {{platform}} will be available shortly. Use the refresh button in the top right to check for new reviews."
+  },
+  "footer": {
+    "privacyPolicy": "Privacy Policy",
+    "termsOfUse": "Terms of Use",
+    "copyright": "© {{year}} {{company}}. All rights reserved.",
+    "designedBy": "Designed by {{company}}"
   }
 }
