--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -323,5 +323,73 @@
     "featureMonthlySummary": "Rapports de résumé mensuels",
     "featureSentiment": "Analyse de sentiment avancée",
     "featureSupport": "Support prioritaire"
+  },
+  "companyPage": {
+    "seoTitle": "{{company}} - Analyse des avis | Boresha",
+    "seoDescription": "Consultez les analyses détaillées des avis pour {{company}}. Suivez le sentiment, les notes, les mots-clés et les commentaires clients de tous vos emplacements et plateformes.",
+    "seoKeywords": "avis {{company}}, analyse des avis, commentaires clients, analyse du sentiment, avis {{industry}}",
+    "backToDashboard": "Retour au tableau de bord",
+    "back": "Retour",
+    "refresh": "Actualiser",
+    "loadingCompanyData": "Chargement des données de l'entreprise...",
+    "companyNotFound": "Entreprise introuvable",
+    "dataFilters": "Filtres de données",
+    "dataFiltersDescription": "Filtrez toutes les données de cette page par emplacement, date, mot-clé, note et sujet",
+    "clearAll": "Tout effacer",
+    "allLocations": "Tous les emplacements",
+    "fromDate": "Date de début",
+    "toDate": "Date de fin",
+    "keyword": "Mot-clé",
+    "allKeywords": "Tous les mots-clés",
+    "rating": "Note",
+    "allRatings": "Toutes les notes",
+    "stars": "étoiles",
+    "star": "étoile",
+    "topic": "Sujet",
+    "allTopics": "Tous les sujets",
+    "active": "Actif :",
+    "keywordLabel": "Mot-clé : {{keyword}}",
+    "starsLabel": "{{rating}} {{stars}}",
+    "topicLabel": "Sujet : {{topic}}",
+    "totalReviews": "Total des avis",
+    "averageRating": "Note moyenne",
+    "positiveReviews": "Avis positifs",
+    "negativeReviews": "Avis négatifs",
+    "topics": "Sujets",
+    "topicsDescription": "Thèmes communs abordés dans les avis",
+    "showLess": "Afficher moins",
+    "showAll": "Afficher tout ({{count}})",
+    "mentionedIn": "Mentionné dans",
+    "review": "avis",
+    "reviews": "avis",
+    "keywordAnalysisByCategory": "Analyse des mots-clés par catégorie",
+    "mentions": "mentions",
+    "trendingKeywords": "Mots-clés en tendance",
+    "trendingKeywordsDescription": "Termes les plus fréquemment mentionnés dans les avis",
+    "recentReviews": "Avis récents",
+    "allReviews": "Tous les avis",
+    "showingReviews": "Affichage de {{shown}} avis sur {{total}}",
+    "pageOf": "(Page {{current}} sur {{total}})",
+    "recentOnly": "Récent uniquement",
+    "showAllReviews": "Tout afficher",
+    "clearFilters": "Effacer les filtres",
+    "noReviewsMatch": "Aucun avis ne correspond à vos filtres",
+    "noReviewsMatchDescription": "Essayez d'ajuster vos filtres pour voir plus de résultats",
+    "clearAllFilters": "Effacer tous les filtres",
+    "previous": "Précédent",
+    "next": "Suivant",
+    "pageOfShort": "Page {{current}} sur {{total}}",
+    "comingSoon": "Bientôt disponible !",
+    "integrationComingSoon": "L'intégration {{platform}} est actuellement en développement. Nous travaillons dur pour vous apporter des importations d'avis fluides depuis toutes les grandes plateformes.",
+    "stayTuned": "Restez à l'écoute pour les mises à jour ! Nous vous informerons dès que cette fonctionnalité sera disponible.",
+    "gotIt": "Compris",
+    "pleaseAddLocation": "Veuillez ajouter au moins un emplacement à cette entreprise avant de connecter les plateformes.",
+    "reviewsAvailableShortly": "Les avis de {{platform}} seront disponibles sous peu. Utilisez le bouton d'actualisation en haut à droite pour vérifier les nouveaux avis."
+  },
+  "footer": {
+    "privacyPolicy": "Politique de confidentialité",
+    "termsOfUse": "Conditions d'utilisation",
+    "copyright": "© {{year}} {{company}}. Tous droits réservés.",
+    "designedBy": "Conçu par {{company}}"
   }
 }
