Enhance localization support across multiple components for improved multilingual experience
- Integrated the useTranslation hook from react-i18next into the CompanyHeader, FetchPlatformReviews, LocationComponent, MonthlySummary, PlatformConnectionDialog, ReviewComponent, and StatCardWithTrend components, replacing hardcoded strings with translation keys for better localization.
- Updated user-facing strings in these components to utilize translation keys, ensuring consistent language usage and enhancing accessibility for users in different languages.
- Added new translation keys in both en.json and fr.json files to support the updated strings, enriching the application's multilingual capabilities.

This update significantly enhances the application's localization, allowing users to interact with the platform in their preferred language while maintaining a consistent and professional interface.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -171,7 +171,13 @@
     "avgRating": "Avg Rating",
     "positive": "positive",
     "negative": "negative",
-    "viewDetails": "View Details"
+    "viewDetails": "View Details",
+    "memberSince": "Member since",
+    "editCompanyDetails": "Edit Company Details",
+    "uploadImage": "Please select an image file",
+    "imageTooLarge": "Image must be less than 5MB",
+    "failedUploadLogo": "Failed to upload logo. Please try again.",
+    "failedUpdateCompany": "Failed to update company details. Please try again."
   },
   "profile": {
     "title": "Profile Settings",
@@ -231,21 +237,48 @@
   },
   "monthlySummary": {
     "title": "Monthly Summary",
+    "subtitle": "AI-generated insights from customer reviews",
     "month": "Month",
     "year": "Year",
+    "january": "January",
+    "february": "February",
+    "march": "March",
+    "april": "April",
+    "may": "May",
+    "june": "June",
+    "july": "July",
+    "august": "August",
+    "september": "September",
+    "october": "October",
+    "november": "November",
+    "december": "December",
     "totalReviews": "Total Reviews",
     "averageRating": "Average Rating",
-    "positive": "Positive",
+    "positiveOutOf": "Positive",
     "neutral": "Neutral",
     "negative": "Negative",
     "summary": "Summary",
     "noSummary": "No summary available",
-    "generating": "Generating summary...",
-    "comparePrevious": "Compare with Previous Month"
+    "noReviews": "No reviews for this month",
+    "generating": "Generating...",
+    "comparePrevious": "Compare with Previous Month",
+    "aiInsights": "AI Insights",
+    "keyMetrics": "Key Metrics",
+    "positive": "Positive",
+    "percentOfReviews": "% of reviews",
+    "noMonthlySummary": "No monthly summary currently available",
+    "currentMonthMessage": "Summaries are automatically generated for the current month after the 15th or on/after the 28th.",
+    "pastMonthMessage": "Summaries can be generated manually for past months.",
+    "generateSummary": "Generate Summary",
+    "summaryAlreadyGenerated": "Summary already generated",
+    "summaryGeneratedSuccess": "Summary generated successfully!",
+    "totalOutOfFive": "/ 5.0"
   },
   "location": {
     "title": "Locations",
     "addLocation": "Add Location",
+    "noLocationsYet": "No locations yet",
+    "addFirstLocation": "Add your first location to start tracking reviews",
     "locationName": "Location Name",
     "address": "Address",
     "city": "City",
@@ -257,11 +290,22 @@
     "saveLocation": "Save Location",
     "locationAdded": "Location added successfully",
     "noLocations": "No locations found",
-    "locationDetails": "Location Details"
+    "locationDetails": "Location Details",
+    "fetchReviews": "Fetch Reviews:",
+    "fetching": "Fetching...",
+    "fetch": "Fetch {{platform}}"
   },
   "platform": {
     "title": "Platform Connection",
     "connect": "Connect Platform",
+    "connectToLocations": "Connect Platform to Locations",
+    "connectDescription": "Connect a platform business to one of your locations",
+    "whatHappens": "What happens when you connect a platform:",
+    "connectPoint1": "A platform location or business will be connected to one of your locations",
+    "connectPoint2": "Reviews will be pulled from the platform and linked to that location",
+    "connectPoint3": "You will then be able to pull reviews for that location in the future",
+    "soon": "Soon",
+    "vs": "vs",
     "platformName": "Platform Name",
     "platformUrl": "Platform URL",
     "save": "Save Connection",
@@ -270,7 +314,43 @@
     "sync": "Sync",
     "lastSync": "Last Sync",
     "syncNow": "Sync Now",
-    "fetchingReviews": "Fetching reviews..."
+    "fetchingReviews": "Fetching reviews...",
+    "connectTo": "Connect {{platform}} to {{company}}",
+    "selectLocation": "Select Location",
+    "allLocationsConnected": "All locations are already connected to {{platform}}. Please add a new location to connect.",
+    "enterPlaceId": "Enter {{label}}",
+    "finding": "Finding...",
+    "find": "Find",
+    "verifiedListing": "Verified Listing",
+    "rating": "Rating: {{rating}} / 5.0",
+    "reviewsCount": "{{count}} reviews",
+    "connecting": "Connecting...",
+    "connect": "Connect",
+    "cancel": "Cancel",
+    "pleaseEnterPlatformId": "Please enter a Platform Location ID",
+    "failedVerifyListing": "Failed to verify listing. Please check the ID.",
+    "failedConnectPlatform": "Failed to connect platform",
+    "platformIdLabels": {
+      "pageId": "Page ID",
+      "placeId": "Place ID",
+      "businessId": "Business ID",
+      "restaurantId": "Restaurant ID",
+      "locationId": "Location ID"
+    },
+    "platformIdPlaceholders": {
+      "facebook": "e.g., 123456789012345",
+      "google": "e.g., ChIJN1t_tDeuEmsRUsoyG83frY4",
+      "yelp": "e.g., cafe-de-olla-san-francisco-2",
+      "opentable": "e.g., restaurant-name",
+      "tripadvisor": "e.g., g1234567"
+    },
+    "platformIdInstructions": {
+      "facebook": "Find your Page ID in Page Settings > About",
+      "google": "Use Google Place ID Finder or find in Google My Business URL",
+      "yelp": "Found in your business URL: yelp.com/biz/[business-id]",
+      "opentable": "Found in your restaurant URL or OpenTable settings",
+      "tripadvisor": "Found in your location URL (e.g., tripadvisor.com/Restaurant_Review...)"
+    }
   },
   "pricing": {
     "title": "Pricing",
