--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -160,6 +160,22 @@
     "viewCompany": "Voir l'entreprise",
     "totalLocations": "Total des emplacements",
     "totalReviews": "Total des avis",
+    "memberSince": "Membre depuis",
+    "editCompanyDetails": "Modifier les détails de l'entreprise",
+    "companyName": "Nom de l'entreprise",
+    "industry": "Industrie",
+    "description": "Description",
+    "website": "Site web",
+    "cancel": "Annuler",
+    "saving": "Enregistrement...",
+    "saveChanges": "Enregistrer les modifications",
+    "uploadImage": "Veuillez sélectionner un fichier image",
+    "imageTooLarge": "L'image doit faire moins de 5 Mo",
+    "failedUploadLogo": "Échec du téléchargement du logo. Veuillez réessayer.",
+    "failedUpdateCompany": "Échec de la mise à jour des détails de l'entreprise. Veuillez réessayer.",
+    "avgRating": "Note moy.",
+    "positive": "positif",
+    "negative": "négatif",
     "lastSync": "Dernière synchronisation",
     "never": "Jamais",
     "companyDetails": "Détails de l'entreprise",
@@ -168,12 +184,64 @@
     "saveCompany": "Enregistrer l'entreprise",
     "companyCreated": "Entreprise créée avec succès",
     "companyUpdated": "Entreprise mise à jour avec succès",
-    "companyDeleted": "Entreprise supprimée avec succès",
-    "reviews": "Avis",
-    "avgRating": "Note moy.",
-    "positive": "positif",
-    "negative": "négatif",
-    "viewDetails": "Voir les détails"
+    "companyDeleted": "Entreprise supprimée avec succès"
+  },
+  "platform": {
+    "title": "Connexion à la plateforme",
+    "connect": "Connecter la plateforme",
+    "connectToLocations": "Connecter la plateforme aux emplacements",
+    "connectDescription": "Connectez une entreprise de plateforme à l'un de vos emplacements",
+    "whatHappens": "Ce qui se passe lorsque vous connectez une plateforme :",
+    "connectPoint1": "Un emplacement ou une entreprise de plateforme sera connecté à l'un de vos emplacements",
+    "connectPoint2": "Les avis seront récupérés de la plateforme et liés à cet emplacement",
+    "connectPoint3": "Vous pourrez ensuite récupérer les avis pour cet emplacement à l'avenir",
+    "soon": "Bientôt",
+    "vs": "vs",
+    "platformName": "Nom de la plateforme",
+    "platformUrl": "URL de la plateforme",
+    "save": "Enregistrer la connexion",
+    "connected": "Connecté",
+    "disconnected": "Déconnecté",
+    "sync": "Synchroniser",
+    "lastSync": "Dernière synchronisation",
+    "syncNow": "Synchroniser maintenant",
+    "fetchingReviews": "Récupération des avis...",
+    "connectTo": "Connecter {{platform}} à {{company}}",
+    "selectLocation": "Sélectionner un emplacement",
+    "allLocationsConnected": "Tous les emplacements sont déjà connectés à {{platform}}. Veuillez ajouter un nouvel emplacement pour vous connecter.",
+    "enterPlaceId": "Entrer {{label}}",
+    "finding": "Recherche...",
+    "find": "Rechercher",
+    "verifiedListing": "Annonce vérifiée",
+    "rating": "Note : {{rating}} / 5.0",
+    "reviewsCount": "{{count}} avis",
+    "connecting": "Connexion...",
+    "connect": "Connecter",
+    "cancel": "Annuler",
+    "pleaseEnterPlatformId": "Veuillez entrer un identifiant d'emplacement de plateforme",
+    "failedVerifyListing": "Échec de la vérification de l'annonce. Veuillez vérifier l'identifiant.",
+    "failedConnectPlatform": "Échec de la connexion à la plateforme",
+    "platformIdLabels": {
+      "pageId": "ID de page",
+      "placeId": "ID de lieu",
+      "businessId": "ID d'entreprise",
+      "restaurantId": "ID de restaurant",
+      "locationId": "ID d'emplacement"
+    },
+    "platformIdPlaceholders": {
+      "facebook": "ex. : 123456789012345",
+      "google": "ex. : ChIJN1t_tDeuEmsRUsoyG83frY4",
+      "yelp": "ex. : cafe-de-olla-san-francisco-2",
+      "opentable": "ex. : restaurant-name",
+      "tripadvisor": "ex. : g1234567"
+    },
+    "platformIdInstructions": {
+      "facebook": "Trouvez votre ID de page dans Paramètres de la page > À propos",
+      "google": "Utilisez le rechercheur d'ID de lieu Google ou trouvez-le dans l'URL Google My Business",
+      "yelp": "Trouvé dans l'URL de votre entreprise : yelp.com/biz/[business-id]",
+      "opentable": "Trouvé dans l'URL de votre restaurant ou les paramètres OpenTable",
+      "tripadvisor": "Trouvé dans l'URL de votre emplacement (ex. : tripadvisor.com/Restaurant_Review...)"
+    }
   },
   "profile": {
     "title": "Paramètres du profil",
@@ -233,21 +301,48 @@
   },
   "monthlySummary": {
     "title": "Résumé mensuel",
+    "subtitle": "Insights générés par IA à partir des avis clients",
     "month": "Mois",
     "year": "Année",
+    "january": "Janvier",
+    "february": "Février",
+    "march": "Mars",
+    "april": "Avril",
+    "may": "Mai",
+    "june": "Juin",
+    "july": "Juillet",
+    "august": "Août",
+    "september": "Septembre",
+    "october": "Octobre",
+    "november": "Novembre",
+    "december": "Décembre",
     "totalReviews": "Total des avis",
     "averageRating": "Note moyenne",
-    "positive": "Positif",
+    "positiveOutOf": "Positif",
     "neutral": "Neutre",
     "negative": "Négatif",
     "summary": "Résumé",
     "noSummary": "Aucun résumé disponible",
-    "generating": "Génération du résumé...",
-    "comparePrevious": "Comparer avec le mois précédent"
+    "noReviews": "Aucun avis pour ce mois",
+    "generating": "Génération...",
+    "comparePrevious": "Comparer avec le mois précédent",
+    "aiInsights": "Insights IA",
+    "keyMetrics": "Métriques clés",
+    "positive": "Positif",
+    "percentOfReviews": "% des avis",
+    "noMonthlySummary": "Aucun résumé mensuel disponible pour le moment",
+    "currentMonthMessage": "Les résumés sont automatiquement générés pour le mois en cours après le 15 ou à partir du 28.",
+    "pastMonthMessage": "Les résumés peuvent être générés manuellement pour les mois précédents.",
+    "generateSummary": "Générer le résumé",
+    "summaryAlreadyGenerated": "Résumé déjà généré",
+    "summaryGeneratedSuccess": "Résumé généré avec succès !",
+    "totalOutOfFive": "/ 5.0"
   },
   "location": {
     "title": "Emplacements",
     "addLocation": "Ajouter un emplacement",
+    "noLocationsYet": "Aucun emplacement pour le moment",
+    "addFirstLocation": "Ajoutez votre premier emplacement pour commencer à suivre les avis",
     "locationName": "Nom de l'emplacement",
     "address": "Adresse",
     "city": "Ville",
@@ -259,20 +354,10 @@
     "saveLocation": "Enregistrer l'emplacement",
     "locationAdded": "Emplacement ajouté avec succès",
     "noLocations": "Aucun emplacement trouvé",
-    "locationDetails": "Détails de l'emplacement"
-  },
-  "platform": {
-    "title": "Connexion à la plateforme",
-    "connect": "Connecter la plateforme",
-    "platformName": "Nom de la plateforme",
-    "platformUrl": "URL de la plateforme",
-    "save": "Enregistrer la connexion",
-    "connected": "Connecté",
-    "disconnected": "Déconnecté",
-    "sync": "Synchroniser",
-    "lastSync": "Dernière synchronisation",
-    "syncNow": "Synchroniser maintenant",
-    "fetchingReviews": "Récupération des avis..."
+    "locationDetails": "Détails de l'emplacement",
+    "fetchReviews": "Récupérer les avis :",
+    "fetching": "Récupération...",
+    "fetch": "Récupérer {{platform}}"
   },
   "pricing": {
     "title": "Tarification",
