Enhance localization support in SentimentAnalysis, RatingDistributionChart, ReviewsTimelineChart, and SentimentDonutChart components
- Integrated the useTranslation hook from react-i18next into the SentimentAnalysis, RatingDistributionChart, ReviewsTimelineChart, and SentimentDonutChart components, replacing hardcoded strings with translation keys for improved multilingual support.
- Updated user-facing strings in these components to utilize translation keys, ensuring consistent language usage and enhancing accessibility for users in different languages.
- Added new translation keys in both en.json and fr.json files to support the updated strings, enriching the application's multilingual capabilities.

This update significantly enhances the application's localization, allowing users to interact with the platform in their preferred language while maintaining a consistent and professional interface.

--- a/reviews/src/i18n/locales/en.json
+++ b/reviews/src/i18n/locales/en.json
@@ -235,6 +235,49 @@
     "trendingNegative": "Trending Negative",
     "keyTopics": "Key Topics"
   },
+  "charts": {
+    "sentimentBreakdown": "Sentiment Breakdown",
+    "totalReviews": "Total Reviews",
+    "review": "review",
+    "reviews": "reviews",
+    "reviewsOverTime": "Reviews Over Time",
+    "reviewsOverTimeDescription": "Review volume trends over time with zoom capability",
+    "noTimelineData": "No timeline data available",
+    "avgRating": "avg rating",
+    "ratingDistribution": "Rating Distribution",
+    "noRatingData": "No rating data available",
+    "star": "Star",
+    "stars": "Stars"
+  },
+  "sentimentAnalysis": {
+    "title": "Sentiment Analysis",
+    "description": "AI-powered sentiment insights from {{count}} reviews",
+    "sentimentScore": "Sentiment Score",
+    "overallSentiment": "Overall Sentiment",
+    "proposeActionPlan": "Propose Action Plan",
+    "sentimentDistribution": "Sentiment Distribution",
+    "mostCommonEmotions": "Most common emotions expressed in reviews",
+    "occurrences": "occurrences",
+    "percentOfReviews": "{{percent}}% of reviews",
+    "proposedActionPlan": "Proposed Action Plan",
+    "copied": "Copied!",
+    "copyToClipboard": "Copy to clipboard",
+    "generatingActionPlan": "Generating your action plan...",
+    "filtersApplied": "Filters Applied:",
+    "noActionPlan": "No action plan available.",
+    "close": "Close",
+    "failedGenerate": "Failed to generate action plan. Please try again.",
+    "errorGenerating": "Error generating action plan. Please try again.",
+    "filterLabels": {
+      "location": "Location:",
+      "from": "From:",
+      "to": "To:",
+      "keyword": "Keyword:",
+      "rating": "Rating:",
+      "stars": "stars",
+      "topic": "Topic:"
+    }
+  },
   "monthlySummary": {
     "title": "Monthly Summary",
     "subtitle": "AI-generated insights from customer reviews",
