--- a/reviews/src/i18n/locales/fr.json
+++ b/reviews/src/i18n/locales/fr.json
@@ -299,6 +299,49 @@
     "trendingNegative": "Négatif en tendance",
     "keyTopics": "Sujets clés"
   },
+  "charts": {
+    "sentimentBreakdown": "Répartition des sentiments",
+    "totalReviews": "Total des avis",
+    "review": "avis",
+    "reviews": "avis",
+    "reviewsOverTime": "Avis dans le temps",
+    "reviewsOverTimeDescription": "Tendances du volume d'avis dans le temps avec possibilité de zoom",
+    "noTimelineData": "Aucune donnée chronologique disponible",
+    "avgRating": "note moyenne",
+    "ratingDistribution": "Répartition des notes",
+    "noRatingData": "Aucune donnée de notation disponible",
+    "star": "Étoile",
+    "stars": "Étoiles"
+  },
+  "sentimentAnalysis": {
+    "title": "Analyse des sentiments",
+    "description": "Insights sur les sentiments alimentés par l'IA à partir de {{count}} avis",
+    "sentimentScore": "Score de sentiment",
+    "overallSentiment": "Sentiment global",
+    "proposeActionPlan": "Proposer un plan d'action",
+    "sentimentDistribution": "Répartition des sentiments",
+    "mostCommonEmotions": "Émotions les plus courantes exprimées dans les avis",
+    "occurrences": "occurrences",
+    "percentOfReviews": "{{percent}}% des avis",
+    "proposedActionPlan": "Plan d'action proposé",
+    "copied": "Copié !",
+    "copyToClipboard": "Copier dans le presse-papiers",
+    "generatingActionPlan": "Génération de votre plan d'action...",
+    "filtersApplied": "Filtres appliqués :",
+    "noActionPlan": "Aucun plan d'action disponible.",
+    "close": "Fermer",
+    "failedGenerate": "Échec de la génération du plan d'action. Veuillez réessayer.",
+    "errorGenerating": "Erreur lors de la génération du plan d'action. Veuillez réessayer.",
+    "filterLabels": {
+      "location": "Emplacement :",
+      "from": "Du :",
+      "to": "Au :",
+      "keyword": "Mot-clé :",
+      "rating": "Note :",
+      "stars": "étoiles",
+      "topic": "Sujet :"
+    }
+  },
   "monthlySummary": {
     "title": "Résumé mensuel",
     "subtitle": "Insights générés par IA à partir des avis clients",
